fix: make components code more readable

--- a/src/components/PrefillSourceModal/styles.module.scss
+++ b/src/components/PrefillSourceModal/styles.module.scss
@@ -145,16 +145,6 @@
     padding: 0 20px 15px;
   }
   
-  .sourceCategory {
-    margin-bottom: 8px;
-  }
-  
-  .sourceCategoryHeader {
-    display: flex;
-    align-items: center;
-    padding: 8px 0;
-    cursor: pointer;
-  }
   
   .sourceItem {
     padding: 6px 0 6px 22px;
